--- a/frontend/src/Componentes/ForgotPassword.module.css
+++ b/frontend/src/Componentes/ForgotPassword.module.css
@@ -64,3 +64,22 @@
   text-align: center;
   font-size: 16px;
 }
+.inputGroup {
+  position: relative;
+  margin-bottom: 1rem;
+}
+
+.icon {
+  position: absolute;
+  top: 31%;
+  left: 12px;
+  transform: translateY(-50%);
+  color: #888;
+  font-size: 1.1rem;
+  pointer-events: none;
+}
+
+.input {
+  padding: 10px 12px 10px 38px; /* left padding for icon */
+  width: 100%;
+}
