--- a/frontend/src/Componentes/Newsletter.module.css
+++ b/frontend/src/Componentes/Newsletter.module.css
@@ -79,3 +79,28 @@
 .light .subtext {
   color: #666;
 }
+.inputGroup {
+  position: relative;
+  display: flex;
+  align-items: center;
+  /* margin-bottom: 1rem; */
+}
+
+.icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #888;
+  font-size: 1.1rem;
+  pointer-events: none;
+}
+
+.input {
+  padding: 10px 12px 10px 38px; /* extra space on the left for icon */
+  width: 100%;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  font-size: 1rem;
+  border-radius:8px;
+}
