--- a/frontend/src/Componentes/Pages/Meals.module.css
+++ b/frontend/src/Componentes/Pages/Meals.module.css
@@ -261,9 +261,19 @@
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
   .product-container {
     padding: 1rem 0.2rem;
+  }
+  .meal-card button {
+    font-weight: 600;
+    width: 50%;
+    padding: 9px 0;
+  }
+  .btn_category {
+    width: 30%;
+    margin: 5px;
+    min-width: 140px;
   }
   .meals-list {
     gap: 0.8rem;
