--- a/frontend/src/Componentes/Newsletter.module.css
+++ b/frontend/src/Componentes/Newsletter.module.css
@@ -1,9 +1,10 @@
 .newsletter {
   max-width: 100%;
-  /* margin: 5px auto; */
+  margin-bottom: 25px;
   padding: 1.5rem;
-  background-color: #f9f9f9;
+  background-color: #ffffff;
   text-align: center;
+  border-radius: 12px;
 }
 
 .heading {
@@ -48,7 +49,7 @@
 }
 
 .light {
-  background-color: #f9f9f9;
+  background-color: #ffffff;
   color: #000;
 }
 
@@ -102,5 +103,5 @@
   border-radius: 4px;
   border: 1px solid #ccc;
   font-size: 1rem;
-  border-radius:8px;
+  border-radius: 8px;
 }
