--- a/frontend/src/Componentes/Pages/Cart.module.css
+++ b/frontend/src/Componentes/Pages/Cart.module.css
@@ -1,7 +1,7 @@
 /* Container & Theming */
 .cartContainer {
   max-width: 1000px;
-  margin: 2rem auto;
+  margin: 2rem auto 300px auto;
   padding: 2rem;
   border-radius: 12px;
   transition: background-color 0.3s ease, color 0.3s ease;
