--- a/frontend/src/Componentes/Navbar/Navbar.module.css
+++ b/frontend/src/Componentes/Navbar/Navbar.module.css
@@ -238,8 +238,8 @@
   }
 
   .mobileExtras {
-    margin-right: 100px;
-    margin-bottom: 5px;
+    margin-right: 175px;
+    margin-bottom: 7px;
     gap: 10px;
   }
 
@@ -267,6 +267,59 @@
     font-size: 18px;
     margin-left: 10px;
     margin-top: 6px;
+  }
+
+  .badge {
+    font-size: 10px;
+    padding: 1px 5px;
+    top: -5px;
+    right: -8px;
+  }
+}
+@media (max-width: 367px) {
+  .navbar {
+    padding: 0px 0px;
+  }
+
+  .logo img {
+    height: 23px;
+    width: 23px;
+  }
+
+  .menuToggle {
+    font-size: 1.5rem;
+  }
+
+  .mobileExtras {
+    margin-right: 130px;
+    margin-bottom: 7px;
+    gap: 10px;
+  }
+
+  .links {
+    padding: 10px 0;
+  }
+
+  .navList {
+    gap: 12px;
+    padding-left: 15px;
+  }
+
+  .navList li a {
+    font-size: 12px;
+    padding: 4px 6px;
+  }
+
+  .logoutButton {
+    font-size: 12px;
+    padding: 4px 6px;
+  }
+
+  .cart,
+  .themeLink {
+    font-size: 10px;
+    /* margin-left: 10px; */
+    /* margin-top: 6px; */
   }
 
   .badge {
