--- a/frontend/src/Componentes/Signup.module.css
+++ b/frontend/src/Componentes/Signup.module.css
@@ -182,6 +182,35 @@
   height: 20px;
   object-fit: contain;
 }
+.inputGroup {
+  position: relative;
+  margin-bottom: 1rem;
+}
+
+.label {
+  color: gray;
+}
+
+.icon {
+  position: absolute;
+  transform: translateY(-50%);
+  font-size: 18px;
+  top: 65%;
+  left: 10px;
+}
+
+.input {
+  width: 100%;
+  padding: 0.75rem 0.75rem 0.75rem 2.5rem;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+}
+
+.small {
+  color: red;
+  margin-top: -0.5rem;
+  display: block;
+}
 
 /* Themes */
 .light {
