--- a/frontend/src/Componentes/AvatarDropdown.module.css
+++ b/frontend/src/Componentes/AvatarDropdown.module.css
@@ -41,7 +41,7 @@
   display: block;
   width: 100%;
   padding: 12px 11px;
-  font-size: 20px;
+  font-size: 18px;
   color: #eee;
   text-align: left;
   background: none;
@@ -52,7 +52,6 @@
 }
 
 .dropdownMenuItem:hover {
-  /* background-color: #333; */
   color: #f1c40f;
 }
 
@@ -65,5 +64,63 @@
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+/* ------------------ Responsive Styling ------------------ */
+
+@media (max-width: 768px) {
+  .avatar {
+    width: 32px;
+    height: 32px;
+  }
+
+  .dropdownMenu {
+    top: 160%;
+    right: -30px;
+    min-width: 180px;
+    padding: 0.4rem 0;
+  }
+
+  .dropdownMenuItem {
+    font-size: 16px;
+    padding: 10px 12px;
+  }
+}
+
+@media (max-width: 467px) {
+  .avatar {
+    width: 30px;
+    height: 30px;
+  }
+
+  .dropdownMenu {
+    top: 160%;
+    right: -25px;
+    min-width: 170px;
+    padding: 0.4rem 0;
+  }
+
+  .dropdownMenuItem {
+    font-size: 15px;
+    padding: 9px 12px;
+  }
+}
+
+@media (max-width: 367px) {
+  .avatar {
+    width: 26px;
+    height: 26px;
+  }
+
+  .dropdownMenu {
+    top: 150%;
+    right: -15px;
+    min-width: 160px;
+  }
+
+  .dropdownMenuItem {
+    font-size: 14px;
+    padding: 8px 10px;
   }
 }
