--- a/frontend/src/Componentes/Pages/Meals.module.css
+++ b/frontend/src/Componentes/Pages/Meals.module.css
@@ -81,18 +81,28 @@
 }
 
 .meal-card {
-  border: none;
+  height: 420px; /* Fixed consistent height for all cards */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0.5rem;
   border-radius: 14px;
-  padding: 1rem 1rem 1.2rem 1rem;
   text-align: center;
   background: var(--card-bg, #fff);
   box-shadow: 0 4px 24px rgba(0, 0, 0, 0.08);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  transition: box-shadow 0.3s, transform 0.2s, background 0.3s, color 0.3s;
-  min-height: 420px;
+  transition: box-shadow 0.3s, transform 0.2s;
 }
+
+.meal-card p {
+  font-size: 0.9rem;
+  /* margin-bottom: 0.5rem; */
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* Show only 2 lines */
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+}
+
 .meal-Link {
   text-decoration: none;
 }
@@ -114,7 +124,7 @@
 
 .meal-card img {
   width: 100%;
-  height: 210px;
+  height: 200px;
   object-fit: cover;
   border-radius: 10px;
   margin-bottom: 1rem;
@@ -122,10 +132,9 @@
 }
 
 .meal-card h3 {
-  margin: 0.7rem 0 0.4rem;
+  /* margin: 0.7rem 0 0.4rem; */
   font-size: 1.25rem;
   font-weight: 600;
-  ;
 }
 .dark .meal-card h3 {
   color: #f5f5f5;
@@ -171,7 +180,7 @@
   color: #fff;
   border: none;
   padding: 12px 0;
-  width: 90%;
+  width: 100%;
   border-radius: 8px;
   cursor: pointer;
   font-weight: 700;
@@ -234,7 +243,7 @@
 
 .page-btn {
   margin: 0 0.2rem;
-  padding: 0.4rem 0.9rem;
+  padding: 0.7rem 0.9rem;
   border-radius: 8px;
   border: 1px solid #ccc;
   background: #fff;
@@ -296,7 +305,7 @@
   }
   .meal-card button {
     font-weight: 600;
-    width: 50%;
+    width: 100%;
     padding: 9px 0;
   }
   .btn_category {
