change in ui and some logic

--- a/frontend/src/Componentes/Pages/Meals.module.css
+++ b/frontend/src/Componentes/Pages/Meals.module.css
@@ -175,7 +175,7 @@
 }
 
 .meal-card button {
-  margin-top: auto;
+  margin-top: -20px;
   background: linear-gradient(90deg, #ff6600 60%, #ff6600 100%);
   color: #fff;
   border: none;
